// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowNodeIcon should render icon for ACTIVE EVENT 1`] = `
<FlownodeEvent
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for ACTIVE GATEWAY 1`] = `
<FlownodeGateway
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for ACTIVE TASK 1`] = `
<FlownodeActivity
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for COMPLETED EVENT 1`] = `
<FlownodeEventCompleted
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for COMPLETED GATEWAY 1`] = `
<FlownodeGatewayCompleted
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for COMPLETED TASK 1`] = `
<FlownodeActivityCompleted
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for INCIDENT EVENT 1`] = `
<StateIconIncident
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for INCIDENT GATEWAY 1`] = `
<StateIconGatewayIncident
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for INCIDENT TASK 1`] = `
<StateIconFlownodeActivityIncident
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for TERMINATED EVENT 1`] = `
<Stop
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for TERMINATED GATEWAY 1`] = `
<Stop
  height="16px"
  width="16px"
/>
`;

exports[`FlowNodeIcon should render icon for TERMINATED TASK 1`] = `
<Stop
  height="16px"
  width="16px"
/>
`;
